add styles contact

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,22 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href=".././css/styles.css">
-    <link rel="stylesheet" href=".././css/desktop.css" media="(min-width: 1316px)">
+    <link rel="icon" type="image/svg" href="/assets/img/planta.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1316px)">
 </head>
 <body>
-    <header>
+    <header class="background__header--contact">
         <nav class="navbar__container scrollmenu">
             <a href="../index.html">Inicio</a></li> 
-            <a href="../pages/cuidados-y-tips.html">Cuidados y tips</a>
-            <a href="../pages/about.html">Conóceme</a></li>
-            <a href="../pages/contacto.html">Contacto</a>
+            <a href="./cuidados-y-tips.html">Cuidados y tips</a>
+            <a href="./about.html">Conóceme</a></li>
+            <a href="./contacto.html">Contacto</a>
         </nav>
+        <div class="header__title--container">
+            <h1>Contacto</h1>
+            <p>
+                Regala una vida.
+            </p>
+        </div>
     </header>
     <main>
-        <p>
-            Compra plantas en línea y recibe tu pedido en casa o en el destino que elijas entre 2 y 5 días hábiles después de concretar la compra. Hacemos envíos a todo Colombia o si estás en Cúcuta puedes visitarnos en nuestro showroom ubicado en la calle 26B # 70-93 (Barrio Caobos) y recoger tu pedido sin costo adicional.
-        </p>
+        <picture class="img__contacto">
+            <img src="/assets/img/contacto-artemisa.png" alt="Nombre de CEO y CTO">
+        </picture>
+        <article class="article__section">
+            <p class="article__section--text">
+                Compra plantas en línea y recibe tu pedido en casa o en el destino que elijas entre 2 y 5 días hábiles después de concretar la compra. Hacemos envíos a todo Colombia o si estás en Cúcuta puedes visitarnos en nuestro showroom ubicado en la calle 26B # 70-93 (Barrio Caobos) y recoger tu pedido sin costo adicional.
+            </p>
+        </article>
+        <article class="article__section--ig">
+            <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer"><span class="icon__contact"></span></a>
+        </article>
     </main>
     <footer>
         <section class="left">
