--- a/pages/about.html
+++ b/pages/about.html
@@ -11,39 +11,39 @@
     <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1316px)">
 </head>
 <body>
-<header class="background__header">
-    <nav class="navbar__container scrollmenu">
-        <a href="../index.html">Inicio</a></li>  
-        <a href="./cuidados-y-tips.html">Cuidados y tips</a>
-        <a href="./about.html"">Conóceme</a></li>
-        <a href="#">Contacto</a>
-    </nav>
-    <div class="header__title--container">
-        <h1>Conóceme</h1>
-    </div>
-</header>
-<main>
-    <article class="article__section">
-        <p class="article__section--text">
-            Mi nombre es Kelly Juliana Heredia y junto a mi compañera Rossana Martínez iniciamos este emprendimiento con el fin de mostrar al mundo nuestra pasión por la naturaleza
-        </p>
-    </article>
-</main>
-<footer>
-    <section class="left">
-        <ul>
-            <li><a href="index.html">Artemisa Plant Shop © 2021</a></li>
-            <li><a href="https://wa.me/573203999636">Whatsapp</a></li>
-        </ul>
-    </section>
-    <section class="right">
-        <ul>
-            <li><a href="https://web.facebook.com/Artemisa-Plant-Shop-107380508358430">Facebook</a></li>
-            <li>
-                <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
-            </li>
-        </ul>
-    </section>
-</footer>
+    <header class="background__header--about">
+        <nav class="navbar__container scrollmenu">
+            <a href="../index.html">Inicio</a></li>
+            <a href="./cuidados-y-tips.html">Cuidados y tips</a>
+            <a href="./about.html"">Conóceme</a></li>
+            <a href="./contacto.html">Contacto</a>
+        </nav>
+        <div class="header__title--container">
+            <h1>Conóceme</h1>
+        </div>
+    </header>
+    <main>
+        <article class="article__section">
+            <p class="article__section--text">
+                Mi nombre es Kelly Juliana Heredia y junto a mi compañera Rossana Martínez iniciamos este emprendimiento con el fin de mostrar al mundo nuestra pasión por la naturaleza.
+            </p>
+        </article>
+    </main>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="index.html">Artemisa Plant Shop © 2021</a></li>
+                <li><a href="https://wa.me/573203999636">Whatsapp</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <ul>
+                <li><a href="https://web.facebook.com/Artemisa-Plant-Shop-107380508358430">Facebook</a></li>
+                <li>
+                    <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
