--- a/pages/cuidados-y-tips.html
+++ b/pages/cuidados-y-tips.html
@@ -16,7 +16,7 @@
             <a href="../index.html">Inicio</a></li>  
             <a href="./cuidados-y-tips.html">Cuidados y tips</a>
             <a href="./about.html"">Conóceme</a></li>
-            <a href="#">Contacto</a>
+            <a href="./contacto.html">Contacto</a>
         </nav>
         <div class="header__title--container">
             <h1>Cuidados y tips</h1>
