add img juli and styles about, contact

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,6 +23,9 @@
         </div>
     </header>
     <main>
+        <picture class="container__img--juli">
+            <img src="../assets/img/juli.jpeg" alt="Juliana Heredia">
+        </picture>
         <article class="article__section">
             <p class="article__section--text">
                 Mi nombre es Kelly Juliana Heredia y junto a mi compañera Rossana Martínez iniciamos este emprendimiento con el fin de mostrar al mundo nuestra pasión por la naturaleza.
