--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,8 +34,10 @@
                 Compra plantas en línea y recibe tu pedido en casa o en el destino que elijas entre 2 y 5 días hábiles después de concretar la compra. Hacemos envíos a todo Colombia o si estás en Cúcuta puedes visitarnos en nuestro showroom ubicado en la calle 26B # 70-93 (Barrio Caobos) y recoger tu pedido sin costo adicional.
             </p>
         </article>
-        <article class="article__section--ig">
-            <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer"><span class="icon__contact"></span></a>
+        <article class="article__section--ig">            
+            <!-- SnapWidget -->
+            <script src="https://snapwidget.com/js/snapwidget.js"></script>
+            <iframe src="https://snapwidget.com/embed/972989" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:80%; "></iframe>
         </article>
     </main>
     <footer>
@@ -51,7 +53,7 @@
                 <li>
                     <a href="https://www.instagram.com/artemisa.plantshop/" target="_blank" rel="noopener noreferrer">Instagram</a>
                 </li>
-            </ul>
+            </ul>            
         </section>
     </footer>
 </body>
