section contact sucess

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="./index.html">Inicio</a></li>  
             <a href="./pages/cuidados-y-tips.html">Cuidados y tips</a>
             <a href="./pages/about.html">Conóceme</a></li>
-            <a href="#">Contacto</a>
+            <a href="./pages/contacto.html">Contacto</a>
         </nav>
         <div class="header__title--container">
             <h1>Artemisa Plant Shop</h1>
